United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7103380 assertion failure with -XX:+PrintNativeNMethods
7103380 : assertion failure with -XX:+PrintNativeNMethods

Details
Type:
Bug
Submit Date:
2011-10-21
Status:
Closed
Updated Date:
2012-03-22
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
solaris_10
Sub-Component:
compiler
CPU:
x86
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
While debugging something else I hit the following failure with $j170/fastdebug/bin/java -XX:+PrintNativeNMethods -client -Xcomp foo

# after -XX: or in .hotspotrc:  SuppressErrorAt=/relocInfo.cpp:169
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/workspace/jdk7-2-build-solaris-i586-product/jdk7/hotspot/src/share/vm/code/relocInfo.cpp:169), pid=15503, tid=2
#  assert(limit == NULL || limit <= nm->code_end()) failed: in bounds
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) Client VM (21.0-b17-fastdebug compiled mode solaris-x86 )
# Core dump written. Default location: /net/smite.us.oracle.com/export/ws/metadata/core or core.15503
#
# An error report file with more information is saved as:
# /net/smite.us.oracle.com/export/ws/metadata/hs_err_pid15503.log
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

The problem seems to be garbage in the end of the code section in the native wrapper and the fact that the last CodeSection isn't aligned, so it attempts to disassemble off the end up buffer.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/754110e02bd5
                                     
2012-03-22
EVALUATION

See main CR
                                     
2011-11-30
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-emb/hotspot/rev/754110e02bd5
                                     
2011-11-29
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/754110e02bd5
                                     
2011-11-15
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/754110e02bd5
                                     
2011-10-24



Hardware and Software, Engineered to Work Together