7103380: assertion failure with -XX:+PrintNativeNMethods

Reviewed-by: kvn, iveresov